# ya-agent-sdk

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  SKILL.md  pyproject.toml  skills
docs/: README.md  context.md  environment.md  events.md  media.md  message-bus.md  model.md  resumable-resources.md  skills.md  subagent.md  toolset.md
examples/: .env.example  (+3 more)
yaai/: README.md  pyproject.toml
yaai/spec/: 00-overview.md  01-event-system.md  02-configuration.md  04-steering.md  05-browser-integration.md  06-ui-layout.md  07-logging.md  08-hitl.md
yaai/tests/: conftest.py  test_app_integration.py  test_browser.py  test_commands.py  test_config.py  test_display.py  test_environment.py  test_events_hooks.py  test_hitl.py  test_logging.py  test_mcp.py  test_processes.py  test_runtime.py  test_state.py  test_streaming.py  test_toolsets.py  test_usage.py
yaai/yaai/: __init__.py  browser.py  cli.py  config.py  display.py  environment.py  events.py  hooks.py  logging.py  mcp.py  processes.py  runtime.py  usage.py
yaai/yaai/app/: __init__.py  tui.py
yaai/yaai/hitl/: __init__.py  ui.py
yaai/yaai/rendering/: __init__.py  event_renderer.py  tool_message.py  tracker.py
yaai/yaai/rendering/tool_panels/: __init__.py  edit_panel.py
yaai/yaai/skills/: __init__.py
yaai/yaai/skills/cli-config/: SKILL.md
yaai/yaai/streaming/: __init__.py  event_handler.py  subagent_tracker.py  text_streamer.py
yaai/yaai/templates/: config.toml  env.example  system_prompt.md  tools.toml
yaai/yaai/toolsets/: __init__.py  process.py
(+225 files in other folders)
